# deco-uv-erte

./: .gitignore  .sqlfluff  deco-uv-erte.code-profile  pyproject.toml
glue/data-loading/: pyproject.toml
glue/data-loading/src/data_loading/: __init__.py
lambda/ingestion/: pyproject.toml
transformations_elt/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
transformations_elt/models/example/: my_first_dbt_model.sql
