[project]
name = "deco-uv-erte"
version = "0.1.0"
description = "Un super projet de découverte UV"
readme = "README.md"
dependencies = []

[tool.uv.workspace]
members = [
    "lambda/ingestion",
    "glue/data-loading",
    "transformations_elt",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
