[project]
name = "transformations-elt"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.9.4",
    "dbt-duckdb>=1.9.2",
]

[dependency-groups]
dev = [
    "pip>=25.0.1",
    "shandy-sqlfmt[jinjafmt]>=0.26.0",
    "sqlfluff>=3.4.0",
    "sqlfluff-templater-dbt>=3.4.0",
]
